--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/gridLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:columnCount="2"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -16,7 +16,9 @@
         android:id="@+id/amountTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_column="0"
         android:layout_gravity="right|center_vertical"
+        android:layout_row="0"
         android:labelFor="@+id/amountEditText"
         android:text="@string/amount"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -31,8 +33,8 @@
         android:inputType="number"
         android:maxLength="6" >
 
-        <requestFocus />
-    </EditText>       
+
+    </EditText>
 
     <TextView
         android:id="@+id/amountDisplayTextView"
@@ -45,10 +47,27 @@
         android:padding="@dimen/textview_padding"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView 
+    <EditText
+        android:id="@+id/numberEditView"
+        android:layout_width="181dp"
+        android:layout_column="1"
+        android:layout_gravity="left"
+        android:layout_row="1"
+        android:digits="0123456789"
+        android:ems="10"
+        android:inputType="number"
+
+        >
+
+
+    </EditText>
+
+    <TextView
         android:id="@+id/customPercentTextView"
         android:layout_width="wrap_content"
+        android:layout_column="0"
         android:layout_gravity="right|center_vertical"
+        android:layout_row="3"
         android:text="@string/custom_tip_percentage"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -56,7 +75,9 @@
         android:id="@+id/customTipSeekBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_column="1"
         android:layout_gravity="fill_horizontal"
+        android:layout_row="3"
         android:max="30"
         android:progress="18" />
 
@@ -65,7 +86,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_gravity="fill_horizontal" >
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="4" >
 
         <TextView
             android:id="@+id/percent15TextView"
@@ -84,20 +106,22 @@
             android:gravity="center"
             android:text="@string/eighteen_percent"
             android:textAppearance="?android:attr/textAppearanceMedium" />
-
     </LinearLayout>
 
     <TextView
         android:id="@+id/tipTextView"
+        android:layout_column="0"
         android:layout_gravity="right|center_vertical"
+        android:layout_row="5"
         android:text="@string/tip"
-        android:textAppearance="?android:attr/textAppearanceMedium"  />
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <LinearLayout
         android:id="@+id/tipLinearLayout"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_gravity="fill_horizontal" >
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="5" >
 
         <TextView
             android:id="@+id/tip15TextView"
@@ -108,7 +132,7 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
@@ -119,14 +143,15 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
-
     </LinearLayout>
 
     <TextView
         android:id="@+id/totalTextView"
+        android:layout_column="0"
         android:layout_gravity="right|center_vertical"
+        android:layout_row="6"
         android:text="@string/total"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -134,7 +159,8 @@
         android:id="@+id/totalLinearLayout"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_gravity="fill_horizontal" >
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="6" >
 
         <TextView
             android:id="@+id/total15TextView"
@@ -145,7 +171,7 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
@@ -156,10 +182,70 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
-
     </LinearLayout>
-    <Space />
+
+    <Space
+        android:layout_column="0"
+        android:layout_row="7" />
+
+    <TextView
+        android:id="@+id/numberTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_gravity="center_horizontal|top"
+        android:layout_row="1"
+        android:labelFor="@+id/amountEditText"
+        android:text="@string/number"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/numberDisplayTextView"
+        android:layout_width="190dp"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_gravity="left|top"
+        android:layout_row="1"
+        android:background="@android:color/holo_blue_bright"
+        android:padding="@dimen/textview_padding"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <Space
+        android:layout_column="0"
+        android:layout_row="2" />
+
+    <TextView
+        android:id="@+id/averageTextView"
+        android:layout_column="0"
+        android:layout_gravity="right|top"
+        android:layout_row="8"
+        android:text="@string/average"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/averageDisplayTextView"
+        android:layout_width="91dp"
+        android:layout_height="37dp"
+        android:layout_column="1"
+        android:layout_gravity="right|center"
+        android:gravity="center"
+        android:layout_row="8"
+        android:background="@android:color/holo_orange_light"
+        android:textAppearance="?android:attr/textAppearanceMedium"  />
+
+    <TextView
+        android:id="@+id/average15TextView"
+        android:layout_width="93dp"
+        android:layout_height="37dp"
+        android:layout_column="1"
+        android:layout_gravity="left|center"
+        android:gravity="center"
+        android:layout_row="8"
+        android:background="@android:color/holo_orange_light"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        />
+
 
 </GridLayout>
