--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
     <EditText
         android:id="@+id/customerEditText"
+
+        android:numeric="integer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="1"
