final version of the final version! added localization of China

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:labelFor="@+id/amountEditText"
-        android:text="number in party"
+        android:text="@string/number_in_party"
         android:textAppearance="?android:attr/textAppearanceMedium" />
     <EditText
         android:id="@+id/customerEditText"
